--- a/DeployManifest.yaml
+++ b/DeployManifest.yaml
@@ -20,6 +20,7 @@ spec:
             - '--spring.profiles.active=${parameters.springProfilesActive}'
           image: '${parameters.imageHost}/luversof/${execution.application}:latest'
           name: spring
+          workingDir: /usr/local/app
           ports:
             - containerPort: '${#toInt(parameters.nodePort)}'
       imagePullSecrets:
