--- a/DeployManifest.yaml
+++ b/DeployManifest.yaml
@@ -24,6 +24,12 @@ spec:
           ports:
             - containerPort: '${#toInt(parameters.nodePort)}'
           workingDir: /usr/local/app
+          livenessProbe:
+            httpGet:
+              path: /actuator/health/liveness
+              port: 8080
+              initialDelaySeconds: 3
+              periodSeconds: 3
       imagePullSecrets:
         - name: regcred
 ---
