--- a/DeployManifest.yaml
+++ b/DeployManifest.yaml
@@ -26,13 +26,13 @@ spec:
           livenessProbe:
             httpGet:
               path: /actuator/health/liveness
-              port: ${#toInt(parameters.nodePort)}
+              port: ${#toInt(parameters.port)}
             initialDelaySeconds: 20
             periodSeconds: 10
           readinessProbe:
             httpGet:
               path: /actuator/health/readiness
-              port: ${#toInt(parameters.nodePort)}
+              port: ${#toInt(parameters.port)}
             initialDelaySeconds: 20
             periodSeconds: 10
       imagePullSecrets:
