service label spring-boot: "true" 추가

--- a/DeployManifest.yaml
+++ b/DeployManifest.yaml
@@ -43,6 +43,7 @@ kind: Service
 metadata:
   labels:
     app: '${parameters.name}'
+    spring-boot: "true"
   name: '${parameters.name}-service'
   namespace: default
 spec:
