--- a/DeployManifest.yaml
+++ b/DeployManifest.yaml
@@ -58,7 +58,9 @@ spec:
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: '${name}'-hpa
+  labels:
+    app: '${name}'
+  name: '${name}-hpa'
   namespace: default
 spec:
   scaleTargetRef: 
