--- a/DeployManifest.yaml
+++ b/DeployManifest.yaml
@@ -66,7 +66,7 @@ spec:
   scaleTargetRef: 
     apiVersion: apps/v1 
     kind: Deployment
-    name: '${name}'-deployment 
+    name: '${name}-deployment'
   minReplicas: 1 
   maxReplicas: 1 
   targetCPUUtilizationPercentage: 60
