--- a/DeployManifest.yaml
+++ b/DeployManifest.yaml
@@ -69,4 +69,10 @@ spec:
     name: '${name}-deployment'
   minReplicas: 2 
   maxReplicas: 2 
-  targetCPUUtilizationPercentage: 60
+  metrics:
+  - type: Resource
+    resource:
+      name: cpu
+      target:
+        type: Utilization
+        averageUtilization: 50
