--- a/DeployManifest.yaml
+++ b/DeployManifest.yaml
@@ -72,7 +72,7 @@ spec:
     apiVersion: apps/v1 
     kind: Deployment
     name: '${name}-deployment'
-  minReplicas: ${maxReplicas} 
+  minReplicas: ${minReplicas} 
   maxReplicas: ${maxReplicas} 
   metrics:
   - type: Resource
