--- a/DeployManifest.yaml
+++ b/DeployManifest.yaml
@@ -25,8 +25,9 @@ spec:
             httpGet:
               path: /actuator/health/liveness
               port: '${port}'
-            initialDelaySeconds: 30
-            periodSeconds: 20
+            initialDelaySeconds: 10
+            periodSeconds: 3
+            failureThreshold: 60
           name: spring
           ports:
             - containerPort: '${port}'
@@ -41,8 +42,9 @@ spec:
             httpGet:
               path: /actuator/health/readiness
               port: '${port}'
-            initialDelaySeconds: 30
-            periodSeconds: 20
+            initialDelaySeconds: 10
+            periodSeconds: 3
+            failureThreshold: 60
       imagePullSecrets:
         - name: regcred
 ---
