--- a/DeployManifest.yaml
+++ b/DeployManifest.yaml
@@ -66,24 +66,24 @@ spec:
     app: '${name}'
   type: NodePort
 ---
-apiVersion: autoscaling/v2
-kind: HorizontalPodAutoscaler
-metadata:
-  labels:
-    app: '${name}'
-  name: '${name}-hpa'
-  namespace: default
-spec:
-  scaleTargetRef: 
-    apiVersion: apps/v1 
-    kind: Deployment
-    name: '${name}-deployment'
-  minReplicas: ${minReplicas} 
-  maxReplicas: ${maxReplicas} 
-  metrics:
-  - type: Resource
-    resource:
-      name: cpu
-      target:
-        type: Utilization
-        averageUtilization: 50
+#apiVersion: autoscaling/v2
+#kind: HorizontalPodAutoscaler
+#metadata:
+#  labels:
+#    app: '${name}'
+#  name: '${name}-hpa'
+#  namespace: default
+#spec:
+#  scaleTargetRef: 
+#    apiVersion: apps/v1 
+#    kind: Deployment
+#    name: '${name}-deployment'
+#  minReplicas: ${minReplicas} 
+#  maxReplicas: ${maxReplicas} 
+#  metrics:
+#  - type: Resource
+#    resource:
+#      name: cpu
+#      target:
+#        type: Utilization
+#        averageUtilization: 50
